# university-fastapi

./: alembic.ini  demo.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 26fface527c4_update_relationships.py  2cbec106764a_migrate_tables.py  3eae04ebf55a_choose_direct_many_to_many.py  3f03361b0305_add_foreign_key_in_course.py  580da81e939e_add_association_table_and_relationships.py  5b0b5abf91a9_add_cascade_in_course.py  6bea4e1b0e31_add_cascade.py  70cf45d27565_add_email_field_in_student.py  857310fabb84_add_relationship_to_student.py  b7c40a6c757d_email_of_student_must_be_unique.py  b860801d0c7c_add_relationship_to_course.py  e93c22322a79_add_update_cascade.py  eca268f5ee6a_add_association_table_and_relationships.py
app/: __init__.py  database.py  dependenices.py
app/controller/: __init__.py  courses.py  faculty.py  students.py
app/models/: __init__.py  association.py  course.py  faculty.py  student.py
app/schemas/: __init__.py  course.py  faculty.py  student.py
app/services/: __init__.py  course_service.py  faculty_service.py  student_service.py
